--- a/landing.html
+++ b/landing.html
@@ -31,12 +31,12 @@
         </p>
         <div class="my-4">
           <button
-            class="bg-purple-800 px-2 py-3 rounded-full text-white hover:text-slate-900 hover:bg-fuchsia-700 mx-2"
+            class="bg-purple-800 px-2 py-3 rounded-full text-white hover:text-slate-900 hover:bg-white mx-2 hover:border-2 hover:border-purple-900"
           >
             Buy Now
           </button>
           <button
-            class="bg-purple-800 px-2 py-3 rounded-full text-white hover:text-slate-900 hover:bg-fuchsia-700 mx-2"
+            class="bg-purple-800 px-2 py-3 rounded-full text-white hover:text-slate-900 hover:bg-white mx-2 hover:border-2 hover: border-purple-900"
           >
             Contact US
           </button>
